grammar.js
    source_file: ($) =>
      seq(
        field('version', optional($.version)),
        field('language', optional($.langdecl)),
        field('definitions', listWithSeparator($.definition, '\n')),
        optional(field('pattern', $._pattern)),
        field('definitions', listWithSeparator($.definition, '\n')),
      ),

    langdecl: ($) =>
      prec.right(
        seq(
          'language',
          field('name', $.languageName),
          optional(seq('(', field('flavor', $.language_flavor), ')', optional(';'))),
        ),
      ),
    // --- patterns

    _pattern: ($) =>
      prec(
        PREC.PATTERN,
        choice(
          $._literal,
          $.patternNot,
          $.patternOr,
          $.patternOrElse,
          $.patternAny,
          $.patternAnd,
          $.patternMaybe,
          $.patternIfElse,
          $.patternContains,
          $.patternIncludes,
          $.patternAfter,
          $.patternBefore,
          $.within,
          $.bubble,
          $.nodeLike,
          $.mapAccessor,
          $.listIndex,
          $.dot,
          $.some,
          $.every,
          $.underscore,
          $.variable,
          $.regexPattern,
          $.patternAs,
          $.patternLimit,
          $.assignmentAsPattern,
          $.patternAccumulate,
          $.rewrite,
          $.like,
          $.log,
          $.range,
          $.patternWhere,
          $.mulOperation,
          $.divOperation,
          $.modOperation,
          $.addOperation,
          $.subOperation,
          $.sequential,
          $.files,
          seq('(', $._pattern, ')'),
        ),
      ),

    rewrite: ($) =>
      prec.right(
        PREC.REWRITE,
        seq(
          field('left', $._pattern),
          field('annotation', optional($.annotation)),
          '=>',
          field('right', $._pattern),
        ),
      ),

    // --- conditional pattern ------------
    languageName: (_$) =>
      choice(
        'grit',
        'js',
        'html',
        'css',
        'json',
        'java',
        'csharp',
        'python',
        'go',
        'markdown',
        'rust',
        'ruby',
        'sol',
        'solidity',
        'hcl',
        'yaml',
        'ast',
        'universal',
        'sql',
        'toml',
        'php',
        'c',
        'ruby',
        'cpp',
        'kotlin',
        'elixir',
        'xml',
        "vue",
        'zig',
      ),

    snippetContent: (_$) =>
      token.immediate(prec(1, /(?:[^`\\]|\\\$|\\\\|\\`|\\n)+/)),

    _doubleQuoteSnippetContent: (_$) =>
      token.immediate(prec(1, /(?:[^"\\]|\\\$|\\\\|\\"|\\n)+/)),

    // TODO: Use choice to consolidate backtickSnippet, rawBacktickSnippet, doubleQuoteSnippet
    // into a single rule

    backtickSnippet: ($) => seq('`', optional(field('content', $.snippetContent)), '`'),

    doubleQuoteSnippet: ($) =>
      seq(
        '"',
        optional(
          field(
            'content',
            alias($._doubleQuoteSnippetContent, $.snippetContent),
          ),
        ),
        '"',
      ),

    languageSpecificSnippet: ($) =>
      seq(field('language', $.languageName), field('snippet', $.doubleQuoteSnippet)),

    // a code snippet may be prefixed by a label;
    // the label may be prefixed by a module or sort name (separated from the label by a dot)
    // used to be: /((?:[A-Za-z0-9_]+\.)?[A-Za-z0-9_]*)?`(?:[^`\\]|\\`|\\n)*`/
    codeSnippet: ($) =>
      seq(
        field('source', choice($.backtickSnippet, $.languageSpecificSnippet, $.rawBacktickSnippet)),
      ),
