test/corpus/languages.txt
================================================================================
Nix language declaration
================================================================================

language nix
`$x`

--------------------------------------------------------------------------------

(source_file
  (langdecl
    (languageName))
  (codeSnippet
    (backtickSnippet
      (snippetContent))))
