test/corpus/snippets.txt
================================================================================
Snippet contents remain literal
================================================================================

`// REDACTED: $msg` => `/* preserved */ $msg`

--------------------------------------------------------------------------------

(source_file
  (rewrite
    (codeSnippet
      (backtickSnippet
        (snippetContent)))
    (codeSnippet
      (backtickSnippet
        (snippetContent)))))

================================================================================
Language-specific snippets
================================================================================

js "console.log(\"$msg\")"

--------------------------------------------------------------------------------

(source_file
  (codeSnippet
    (languageSpecificSnippet
      (languageName)
      (doubleQuoteSnippet
        (snippetContent)))))

================================================================================
Empty snippets
================================================================================

``

--------------------------------------------------------------------------------

(source_file
  (codeSnippet
    (backtickSnippet)))
